[project]
name = "nudebomb"
requires-python = "<4.0,>=3.10"
authors = [{ name = "AJ Slater", email = "aj@slater.net" }]
license = { text = "GPL-3.0-only" }
dependencies = [
  "confuse~=2.0",
  "pycountry~=24.6",
  "python-dateutil~=2.8",
  "ruamel-yaml~=0.18",
  "treestamps~=2.2.6",
  "typing-extensions~=4.13",
]
version = "4.4.5"
description = "Strip unused languages from mkv files en mass"
readme = "README.md"
keywords = ["mkv", "movie", "video", "srt", "audio", "subtitles"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video :: Conversion",
]

[project.urls]
Source = "https://github.com/ajslater/nudebomb"
Issues = "https://github.com/ajslater/nudebomb/issues"
homepage = "https://github.com/ajslater/nudebomb"
documentation = "https://github.com/ajslater/nudebomb"

[project.scripts]
nudebomb = "nudebomb.cli:main"

[dependency-groups]
dev = [
  "basedpyright~=1.30",
  "codespell~=2.1",
  "coverage[toml]~=7.0",
  "deepdiff~=8.4",
  "hatchling~=1.27",
  "icecream~=2.1",
  "mkdocs~=1.6",
  "mkdocs-minify-plugin~=0.8",
  "neovim~=0.3",
  "pyclean~=3.1",
  "pytest-cov~=6.0",
  "pytest-gitignore~=1.3",
  "radon[toml]~=6.0",
  "ruff~=0.12",
  "toml-cli~=0.7.0",
  "types-python-dateutil~=2.9",
  "vulture~=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["nudebomb", "tests", "NEWS.md"]

[tool.basedpyright]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "dist",
  "test-results",
  "typings",
  "vulture_whitelist.py",
]
pythonVersion = "3.10"
failOnWarnings = false
reportAny = false
reportExplicitAny = false
reportImportCycles = true
reportIncompatibleUnannotatedOverride = true
reportMissingParameterType = false
reportMissingTypeArgument = false
reportPrivateUsage = false # ruff does this
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportUnusedParameter = false # ruff does this
reportMissingTypeStubs = false

[tool.codespell]
skip = ".*,*~,./dist,./node_modules,./package.json,./package-lock.json,./uv.lock,./test-results"
builtin = "clear,rare,code"
check-hidden = true
ignore-words-list = "thead"

[tool.coverage.run]
source = ["nudebomb"]
branch = true
concurrency = ["multiprocessing"]
omit = [
  "*/.*",
  "*__pycache__*",
  "dist/*",
  "node_modules/*",
  "test-results/*",
  "typings/*",
]

[tool.coverage.html]
directory = "test-results/coverage"

[tool.pytest.ini_options]
addopts = """
  --junitxml=test-results/pytest/junit.xml
  -ra
  --strict-markers
  --cov
  --cov-append
  --cov-report=html
  --cov-report=term
"""
junit_family = "xunit2"
testpaths = "tests"

[tool.radon]
exclude = "*~,.*,.*/*,__pycache__/*,dist/*,node_modules/*,test-results/*,typings/*"

[tool.ruff]
extend-exclude = ["**/.*", "**/__pycache__", "dist", "test-results", "typings"]
target-version = "py310"
[tool.ruff.lint]
extend-ignore = [
  "BLE001",  # catch bare exception
  "COM812",  # missing trailing comma
  "COM819",  # prohibit trailing comma
  "D203",    # blank line before class docstring
  "D206",    # formatted
  "D212",    # first line multi line docstring.
  "E111",    # formatted
  "E114",    # formatted
  "E117",    # over-indented
  "E501",    # 88 char line
  "ISC001",  # formatted
  "PERF203", # try block in loop
  "S101",    # assert
  "W191",    # formatted
]
extend-select = [
  "A",
  # "AIR",
  # "ANN",
  "ARG",
  "ASYNC",
  "B",
  "B9",
  "BLE",
  "C",
  "C4",
  "C90",
  "COM",
  # "CPY",
  "D",
  "DJ",
  # "DOC",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  # "FAST",
  "FBT",
  "FIX",
  "FLY",
  # "FURB",
  # "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  # "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  # "Q", Formatted
  "N",
  # NPY,
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TCH",
  # "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
external = ["V101"]
task-tags = ["TODO", "FIXME", "XXX", "http", "HACK"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.vulture]
exclude = [
  "*/.*",
  "*/__pycache__*",
  "*/node_modules*",
  "dist/",
  "test-results/",
  "typings/",
]
min_confidence = 61
sort_by_size = true
